--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,28 +10,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="a.atbash.StageActivity">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:maxLines="8"
-        android:lines="8"
-        android:id="@+id/clue"
-        tools:height="200dp"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:layout_above="@+id/checkButton"
-        android:layout_alignTop="@+id/clueButton"
-        android:layout_alignRight="@+id/checkAns"
-        android:layout_alignEnd="@+id/checkAns"
-        android:layout_toRightOf="@+id/checkButton"
-        android:layout_toEndOf="@+id/checkButton" />
-
     <Button
         android:layout_width="38dp"
         android:layout_height= "40dp"
         android:text = "ך"
         android:id = "@+id/n25"
+        android:background="@drawable/letter"
+        android:textColor="@color/defaultLetterColor"
         android:layout_marginBottom="40dp"
         android:layout_marginLeft="269dp"
         android:layout_alignBottom="@+id/gridLayout"
@@ -42,6 +27,8 @@
         android:layout_height= "40dp"
         android:text = "ץ"
         android:id = "@+id/n26"
+        android:background="@drawable/letter"
+        android:textColor="@color/defaultLetterColor"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="269dp"
         android:layout_alignBottom="@+id/gridLayout"/>
@@ -51,6 +38,8 @@
         android:layout_height= "40dp"
         android:text = "ף"
         android:id = "@+id/n27"
+        android:background="@drawable/letter"
+        android:textColor="@color/defaultLetterColor"
         android:layout_marginBottom="40dp"
         android:layout_marginLeft="302dp"
         android:layout_alignBottom="@+id/gridLayout"
@@ -59,95 +48,25 @@
         android:layout_width="38dp"
         android:layout_height= "40dp"
         android:text = "."
+        android:background="@drawable/letter"
+        android:textColor="@color/defaultLetterColor"
         android:id = "@+id/n28"
         android:layout_marginBottom="0dp"
-        android:layout_marginLeft="301dp"
         android:layout_alignBottom="@+id/gridLayout"
-        />
+        android:layout_alignTop="@+id/n26"
+        android:layout_alignLeft="@+id/n27"
+        android:layout_alignStart="@+id/n27" />
     <Button
         android:layout_width="71dp"
         android:layout_height= "40dp"
         android:text = "->"
         android:id = "@+id/n29"
+        android:background="@drawable/letter"
+        android:textColor="@color/defaultLetterColor"
         android:layout_marginBottom="80dp"
         android:layout_marginLeft="269dp"
         android:layout_alignBottom="@+id/gridLayout"
         />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:layout_above="@+id/gridLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:text="חזור"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/BACK"
-        android:onClick="goToMainActivity"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:text="בדיקה"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/checkButton"
-        android:layout_above="@+id/editText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="19dp" />
-
-    <Button
-        android:text="רמז"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/clueButton"
-        android:layout_above="@+id/checkButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:maxLines="8"
-        android:lines="8"
-        android:id="@+id/question"
-        tools:height="200dp"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:layout_below="@+id/BACK"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/clue"
-        android:layout_alignEnd="@+id/clue"
-        android:layout_above="@+id/clue" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:maxLines="8"
-        android:lines = "8"
-        android:id="@+id/checkAns"
-        tools:height="200dp"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:layout_below="@+id/clue"
-        android:layout_alignRight="@+id/n25"
-        android:layout_alignEnd="@+id/n25"
-        android:layout_toRightOf="@+id/checkButton"
-        android:layout_toEndOf="@+id/checkButton"
-        android:layout_alignBottom="@+id/checkButton" />
 
     <GridLayout
         android:layout_width="wrap_content"
@@ -164,6 +83,8 @@
             android:layout_height= "40dp"
             android:text = "ק"
             android:layout_marginLeft="9dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n1"
             />
         <Button
@@ -171,6 +92,8 @@
             android:layout_height= "40dp"
             android:text = "ר"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n2"
             />
         <Button
@@ -178,6 +101,8 @@
             android:layout_height= "40dp"
             android:text = "א"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n3"
             />
         <Button
@@ -185,6 +110,8 @@
             android:layout_height= "40dp"
             android:text = "ט"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n4"
             />
         <Button
@@ -192,6 +119,8 @@
             android:layout_height= "40dp"
             android:text = "ו"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n5"
             />
         <Button
@@ -199,6 +128,8 @@
             android:layout_height= "40dp"
             android:text = "ן"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n6"
             />
         <Button
@@ -206,6 +137,8 @@
             android:layout_height= "40dp"
             android:text = "ם"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n7"
             />
         <Button
@@ -213,6 +146,8 @@
             android:layout_height= "40dp"
             android:text = "פ"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n8"
             />
         <Button
@@ -220,6 +155,8 @@
             android:layout_height= "40dp"
             android:text = "ש"
             android:layout_marginLeft="9dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n9"
             />
         <Button
@@ -227,6 +164,8 @@
             android:layout_height= "40dp"
             android:text = "ד"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n10"
             />
         <Button
@@ -234,6 +173,8 @@
             android:layout_height= "40dp"
             android:text = "ג"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n11"
         />
         <Button
@@ -241,6 +182,8 @@
             android:layout_height= "40dp"
             android:text = "כ"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n12"
             />
         <Button
@@ -248,6 +191,8 @@
             android:layout_height= "40dp"
             android:text = "ע"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n13"
             />
         <Button
@@ -255,6 +200,8 @@
             android:layout_height= "40dp"
             android:text = "י"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n14"
             />
         <Button
@@ -262,6 +209,8 @@
             android:layout_height= "40dp"
             android:text = "ח"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n15"
             />
         <Button
@@ -269,6 +218,8 @@
             android:layout_height= "40dp"
             android:text = "ל"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n16"
             />
         <Button
@@ -276,6 +227,8 @@
             android:layout_height= "40dp"
             android:text = "ז"
             android:layout_marginLeft="9dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n17"
             />
         <Button
@@ -283,6 +236,8 @@
             android:layout_height= "40dp"
             android:text = "ס"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n18"
             />
         <Button
@@ -290,6 +245,8 @@
             android:layout_height= "40dp"
             android:text = "ב"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n19"
             />
         <Button
@@ -297,6 +254,8 @@
             android:layout_height= "40dp"
             android:text = "ה"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n20"
             />
         <Button
@@ -304,6 +263,8 @@
             android:layout_height= "40dp"
             android:text = "נ"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n21"
             />
         <Button
@@ -311,6 +272,8 @@
             android:layout_height= "40dp"
             android:text = "מ"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n22"
             />
         <Button
@@ -318,6 +281,8 @@
             android:layout_height= "40dp"
             android:text = "צ"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n23"
             />
         <Button
@@ -325,17 +290,119 @@
             android:layout_height= "40dp"
             android:text = "ת"
             android:layout_marginLeft="-6dp"
+            android:background="@drawable/letter"
+            android:textColor="@color/defaultLetterColor"
             android:id = "@+id/n24"
             />
     </GridLayout>
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:maxLines="8"
+        android:lines="8"
+        android:id="@+id/clue"
+        tools:height="200dp"
+        android:gravity="right"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:layout_above="@+id/checkButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="בדיקה"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rectangle_gold"
+        android:id="@+id/checkButton"
+        android:layout_above="@+id/gridLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="11dp" />
+
+    <Button
+        android:text="חזור"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/circle_blue"
+        android:id="@+id/BACK"
+        android:onClick="goToMainActivity"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="רמז"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/circle_red"
+        android:id="@+id/clueButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/gridLayout"
+        android:layout_alignEnd="@+id/gridLayout"
+        android:layout_marginRight="21dp"
+        android:layout_marginEnd="21dp" />
+
     <Button
         android:text="רווח"
-        android:layout_width="330dp"
         android:layout_height="50dp"
+        android:layout_width="330dp"
+        android:layout_alignLeft="@id/gridLayout"
+        android:layout_alignStart="@id/gridLayout"
+        android:layout_marginLeft="10dp"
         android:id="@+id/n30"
+        android:background="@drawable/rectangle_turquoise"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/n27"
-        android:layout_alignEnd="@+id/n27" />
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:inputType="textMultiLine"
+        android:maxLines="8"
+        android:lines = "8"
+        android:gravity="right"
+        android:id="@+id/answer"
+        tools:height="200dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:layout_above="@+id/n29"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/checkButton"
+        android:layout_toRightOf="@+id/checkButton"
+        android:layout_toEndOf="@+id/checkButton" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:maxLines="8"
+        android:lines="8"
+        android:id="@+id/question"
+        android:gravity="right"
+        tools:height="200dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:layout_above="@+id/clue"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/BACK" />
+
+    <TextView
+        android:text="שלב X"
+        android:layout_width="180dp"
+        android:layout_height="110dp"
+        android:id="@+id/textViewStageNumber"
+        android:textSize="32sp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/question" />
 
 </RelativeLayout>
