--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -2,48 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#ffd27f"
     android:id="@+id/activity_main2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="a.atbash.MainActivity">
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/facebook_login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp" />
 
     <Button
-        android:text="שלבים קודמים"
+        android:text="הוראות"
         android:layout_width="160dp"
         android:layout_height="70dp"
-        android:onClick="goToPreviousStagesActivity"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button"
-        android:layout_alignLeft="@+id/button"
-        android:layout_alignStart="@+id/button"
-        tools:background="@android:color/holo_blue_light"
+        android:id="@+id/button4"
+        android:background="@drawable/rectangle_blue"
         android:textColor="@android:color/white"
-        android:layout_marginTop="10dp"
-        android:textSize="16sp"/>
-
-    <Button
-        android:text="הגדרות"
-        android:layout_width="160dp"
-        android:layout_height="70dp"
-        android:id="@+id/button5"
-        android:layout_below="@+id/button4"
-        android:layout_alignLeft="@+id/button4"
-        android:layout_alignStart="@+id/button4"
-        tools:background="@android:color/holo_blue_light"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="10dp"
-        android:textSize="16sp"/>
+        android:textSize="22dp"
+        android:layout_below="@+id/button3"
+        android:layout_alignLeft="@+id/button3"
+        android:layout_alignStart="@+id/button3"
+        android:layout_marginTop="13dp" />
 
     <Button
         android:text="טבלת השיאים"
@@ -51,27 +27,37 @@
         android:layout_height="70dp"
         android:onClick="goToLeaderboardsActivity"
         android:id="@+id/button3"
+        android:background="@drawable/rectangle_blue"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="14dp"
+        android:textSize="22dp"
         android:layout_below="@+id/button2"
         android:layout_alignLeft="@+id/button2"
-        android:layout_alignStart="@+id/button2"
-        tools:background="@android:color/holo_blue_light"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="10dp"
-        android:textSize="16sp"/>
+        android:layout_alignStart="@+id/button2" />
 
     <Button
-        android:text="הוראות"
+        android:text="שלבים קודמים"
         android:layout_width="160dp"
         android:layout_height="70dp"
-        android:id="@+id/button4"
-        android:layout_below="@+id/button3"
-        android:layout_alignLeft="@+id/button3"
-        android:layout_alignStart="@+id/button3"
-        tools:background="@android:color/holo_blue_light"
+        android:onClick="goToPreviousStagesActivity"
+        android:id="@+id/button2"
+        android:background="@drawable/rectangle_blue"
         android:textColor="@android:color/white"
-        android:layout_marginTop="10dp"
-        android:textSize="16sp"
-        />
+        android:layout_marginTop="11dp"
+        android:textSize="22dp"
+        android:layout_below="@+id/button"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignStart="@+id/button" />
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/facebook_login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="19dp" />
 
     <Button
         android:text="שחק עכשיו"
@@ -79,11 +65,11 @@
         android:onClick="goToStageActivity"
         android:id="@+id/button"
         android:layout_width="160dp"
-        tools:background="@android:color/holo_blue_light"
+        android:background="@drawable/rectangle_blue"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:layout_marginTop="85dp"
-        android:layout_alignParentTop="true"
+        android:textSize="22dp"
+        android:layout_marginTop="119dp"
+        android:layout_below="@+id/facebook_login_button"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
