--- a/app/src/main/res/layout/previous_stages.xml
+++ b/app/src/main/res/layout/previous_stages.xml
@@ -15,36 +15,55 @@
     android:layout_height="wrap_content"
     android:columnWidth="80dp"
     android:numColumns="4"
-    android:layout_marginTop="50dp"
-    android:verticalSpacing="8dp"
+    android:layout_marginTop="70dp"
+    android:verticalSpacing="6dp"
     android:horizontalSpacing="2dp"
     android:stretchMode="columnWidth"
     android:gravity="center"/>
     <Button
         android:text="חזור"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/back"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/circle_blue"
+        android:id="@+id/BACK"
         android:onClick="goToMainActivity"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-    <Button
-        android:text="לעמוד הבא"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/nextPage"
-        android:onClick="goToNextPage" />
+        android:layout_alignParentEnd="true" />
+
     <Button
         android:text="לעמוד הקודם"
-        android:layout_alignParentBottom="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="40dp"
         android:id="@+id/backPage"
         android:onClick="goToBackPage"
+        android:background="@drawable/rectangle_red"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="שלבים קודמים"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:textSize="32sp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:layout_toLeftOf="@+id/backPage"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@+id/BACK"
+        android:layout_alignParentTop="true" />
+
+    <Button
+        android:text="לעמוד הבא"
+        android:layout_width="90dp"
+        android:layout_height="40dp"
+        android:background="@drawable/rectangle_green"
+        android:id="@+id/nextPage"
+        android:onClick="goToNextPage"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
